--- a/First-App-CustomUI/static/hello-world/package.json
+++ b/First-App-CustomUI/static/hello-world/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
+    "@atlaskit/button": "^16.3.4",
     "@atlaskit/css-reset": "^6.0.1",
     "@forge/bridge": "^2.4.0",
     "react": "^16.13.1",
