--- a/First-App/manifest.yml
+++ b/First-App/manifest.yml
@@ -3,9 +3,16 @@ modules:
     - key: first-app-hello-world-project-page
       function: main
       title: First App
+  jira:issuePanel:
+    - key: my-issue-panel
+      title: My Issue Panel
+      function: panel
+      icon: https://developer.atlassian.com/platform/forge/images/issue-panel-icon.svg
   function:
     - key: main
       handler: index.run
+    - key: panel
+      handler: index.panel
 app:
   id: ari:cloud:ecosystem::app/3aff1730-9222-4a2d-bc60-4413cdd592aa
 permissions:
