--- a/First-App/manifest.yml
+++ b/First-App/manifest.yml
@@ -17,6 +17,10 @@ modules:
     - key: my-issue-action
       title: Issue Action
       function: action
+  jira:adminPage:
+    - key: my-admin-page
+      title: My First Admin
+      function: admin
   function:
     - key: main
       handler: index.run
@@ -26,6 +30,8 @@ modules:
       handler: index.glance
     - key: action
       handler: index.action
+    - key: admin
+      handler: index.admin
 app:
   id: ari:cloud:ecosystem::app/3aff1730-9222-4a2d-bc60-4413cdd592aa
 permissions:
